syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "TrMcServiceProto";

service TrMcService {
  rpc GetTrMc(GetTrMcRequest) returns (stream TrMc);
}

message GetTrMcRequest {
  int64 startDate = 1;
  int64 endDate = 2;
}

message TrMc {
  string merchantName = 1;
  int32 totalNumberCredits = 2;
  int64 totalAmountCredits = 3;
  int32 totalNumberRecon = 4;
  int64 totalAmountRecon = 5;
}